Agrego loggin global par el servidor, Refactorozo manejo de escepciones , capturando errores y devolviendo mensajes específicos para respuesta de la API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/back_food_store
 spring.datasource.username=postgres
 spring.datasource.password=1234
+
+
+logging.level.root=INFO
+
+logging.level.com.example.foodstore=DEBUG
+
+logging.level.org.hibernate.SQL=WARN
+
+logging.file.name=logs/food-store.log
