--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ logging.level.com.example.foodstore=DEBUG
 
 logging.level.org.hibernate.SQL=WARN
 
-logging.file.name=logs/food-store.log
+# Formato de los logs
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) %cyan(%logger{36}) - %msg%n
