--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/back_food_store
 spring.datasource.username=postgres
-spring.datasource.password=juan123456
+spring.datasource.password=1234
 
 
 logging.level.root=INFO
