Refactor img in DataLoader

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/back-food-store
+spring.datasource.url=jdbc:postgresql://localhost:5432/back_food_store
 spring.datasource.username=postgres
-spring.datasource.password=juan123456
+spring.datasource.password=1234
 
 
 logging.level.root=INFO
